Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -45,24 +45,21 @@ go_alv_grid->set_table_for_first_display(
 ).
 ```
 ```abap
-DATA: gt_uifunc TYPE ui_functions.      " TOP
+********* TOP *********
+DATA gt_uifunc TYPE ui_functions.      " ALV 툴바 제외 기능 목록
 
-APPEND cl_gui_alv_grid=>mc_fc_filter TO gt_uifunc.    " F01
-" → ALV 툴바에서 '필터(Filter)' 버튼 1개만 숨김
+********* F01 *********
+APPEND cl_gui_alv_grid=>mc_fc_filter TO gt_uifunc.    " 필터(Filter) 버튼 숨김
+APPEND cl_gui_alv_grid=>mc_mb_sum TO gt_uifunc.       " 합계/소계 메뉴 전체 숨김
+APPEND cl_gui_alv_grid=>mc_fc_excl_all TO gt_uifunc.  " 모든 표준 툴바 버튼 숨김
 
-APPEND cl_gui_alv_grid=>mc_mb_sum TO gt_uifunc.
-" → 합계/소계 등 숫자 관련 기능이 들어있는 '합계 메뉴 버튼' 전체 숨김
-
-APPEND cl_gui_alv_grid=>mc_fc_excl_all TO gt_uifunc.
-" → ALV 툴바에 있는 모든 표준 버튼을 한 번에 전부 숨김
-
-go_alv_grid->set_table_for_first_display(    " PBO
+********* PBO *********
+CALL METHOD go_alv->set_table_for_first_display
   EXPORTING
     i_structure_name     = 'SBOOK'
     it_toolbar_excluding = gt_uifunc
   CHANGING
-    it_outtab            = gt_data
-).
+    it_outtab            = gt_data.
 ```
 </br>
 </br>
@@ -180,30 +177,26 @@ CLEAR <gs_fcat>.
 ).
 ```
 ```abap
-*---------------------------------------------------------------------*
-* TOP 영역 - 데이터 구조 / 타입 선언
-*---------------------------------------------------------------------*
+********* TOP *********
 TYPE-POOLS: icon.
 
 DATA: BEGIN OF gs_data.
         INCLUDE TYPE sbook.
-DATA:   cancelled_icon TYPE icon-id,
-        phone          TYPE scustom-telephone,
+DATA:   cancelled_icon TYPE icon-id,           " 취소 아이콘
+        phone          TYPE scustom-telephone,  " 전화번호
       END OF gs_data.
 DATA gt_data LIKE TABLE OF gs_data.
 
-DATA: BEGIN OF ls_custom,
+DATA: BEGIN OF ls_custom.
         id        TYPE s_customer,
         telephone TYPE s_phoneno,
       END OF ls_custom.
 DATA lt_custom LIKE TABLE OF ls_custom.
 
-DATA: gt_fcat TYPE lvc_t_fcat,
-      gs_fcat TYPE lvc_s_fcat.
+DATA: gt_fcat TYPE lvc_t_fcat,                 " Field Catalog itab
+      gs_fcat TYPE lvc_s_fcat.                 " Field Catalog str
 
-*---------------------------------------------------------------------*
-* F01 영역 - 데이터 조회
-*---------------------------------------------------------------------*
+********* F01 (데이터 조회) *********
 SELECT *
   FROM sbook
   INTO CORRESPONDING FIELDS OF TABLE gt_data.
@@ -215,18 +208,14 @@ SELECT id telephone
   WHERE id = gt_data-customid
     AND telephone <> space.
 
-*---------------------------------------------------------------------*
-* F01 영역 - 데이터 가공 (아이콘 / 전화번호 세팅)
-*---------------------------------------------------------------------*
+********* F01 (데이터 가공) *********
 LOOP AT gt_data INTO gs_data.
 
-  " 취소 아이콘
-  IF gs_data-cancelled = 'X'.
+  IF gs_data-cancelled = 'X'.                  " 취소 여부 아이콘
     gs_data-cancelled_icon = icon_cancel.
   ENDIF.
 
-  " 전화번호 매핑
-  READ TABLE lt_custom INTO ls_custom
+  READ TABLE lt_custom INTO ls_custom           " 전화번호 매핑
        WITH KEY id = gs_data-customid.
   IF sy-subrc = 0.
     gs_data-phone = ls_custom-telephone.
@@ -234,70 +223,66 @@ LOOP AT gt_data INTO gs_data.
 
   MODIFY gt_data FROM gs_data
     TRANSPORTING cancelled_icon phone.
+
   CLEAR gs_data.
 ENDLOOP.
 
-*---------------------------------------------------------------------*
-* F01 영역 - Field Catalog 설정
-*---------------------------------------------------------------------*
+********* F01 (Field Catalog 설정) *********
 CLEAR gs_fcat.
-gs_fcat-fieldname = 'CANCELLED_ICON'.   " → 취소 여부를 아이콘으로 표시
-gs_fcat-icon      = 'X'.               
-gs_fcat-coltext   = 'Cancelled'. 
+gs_fcat-fieldname = 'CANCELLED_ICON'.   " 취소 아이콘 표시
+gs_fcat-icon      = 'X'.
+gs_fcat-coltext   = 'Cancelled'.
 APPEND gs_fcat TO gt_fcat.
 
 CLEAR gs_fcat.
-gs_fcat-fieldname = 'CANCELLED'.        " → 기존 취소 컬럼 숨김
-gs_fcat-no_out    = 'X'.               
+gs_fcat-fieldname = 'CANCELLED'.        " 기존 취소 컬럼 숨김
+gs_fcat-no_out    = 'X'.
 APPEND gs_fcat TO gt_fcat.
 
 CLEAR gs_fcat.
-gs_fcat-fieldname = 'PASSFORM'.         " → 여권 형식 컬럼 숨김
-gs_fcat-no_out    = 'X'.             
+gs_fcat-fieldname = 'PASSFORM'.         " 여권 형식 숨김
+gs_fcat-no_out    = 'X'.
 APPEND gs_fcat TO gt_fcat.
 
 CLEAR gs_fcat.
-gs_fcat-fieldname = 'PASSBIRTH'.        " → 여권 생년월일 컬럼 숨김   
-gs_fcat-no_out    = 'X'.             
+gs_fcat-fieldname = 'PASSBIRTH'.        " 여권 생년월일 숨김
+gs_fcat-no_out    = 'X'.
 APPEND gs_fcat TO gt_fcat.
 
 CLEAR gs_fcat.
-gs_fcat-fieldname = 'PHONE'.            
-gs_fcat-ref_field = 'TELEPHONE'.        " → 전화번호 컬럼을 SCUSTOM 기준으로 참조하여 4번째 위치에 표시
-gs_fcat-ref_table = 'SCUSTOM'.          
-gs_fcat-col_pos   = 4.                 
+gs_fcat-fieldname = 'PHONE'.            " 전화번호 표시
+gs_fcat-ref_field = 'TELEPHONE'.
+gs_fcat-ref_table = 'SCUSTOM'.
+gs_fcat-col_pos   = 4.
 APPEND gs_fcat TO gt_fcat.
 
 CLEAR gs_fcat.
-gs_fcat-fieldname = 'SMOKER'.           " → 흡연 여부 체크박스로 표시
+gs_fcat-fieldname = 'SMOKER'.           " 체크박스
 gs_fcat-checkbox = 'X'.
 APPEND gs_fcat TO gt_fcat.
 
 CLEAR gs_fcat.
-gs_fcat-fieldname = 'INVOICE'.          " → 송장 여부 체크박스로 표시
+gs_fcat-fieldname = 'INVOICE'.          " 체크박스
 gs_fcat-checkbox = 'X'.
 APPEND gs_fcat TO gt_fcat.
 
 CLEAR gs_fcat.
-gs_fcat-fieldname = 'CLASS'.            " → 컬럼을 색상(C5) + 강조 효과로 표시
+gs_fcat-fieldname = 'CLASS'.            " 컬럼 강조 표시
 gs_fcat-emphasize = 'C510'.
 APPEND gs_fcat TO gt_fcat.
 
 CLEAR gs_fcat.
-gs_fcat-fieldname = 'LOCCURAM'.         " → LOCCURAM 컬럼에 대해 합계 계산을 적용
-gs_fcat-do_sum = 'X'. 
+gs_fcat-fieldname = 'LOCCURAM'.          " 합계 적용
+gs_fcat-do_sum    = 'X'.
 APPEND gs_fcat TO gt_fcat.
 
-*---------------------------------------------------------------------*
-* PBO 영역 - ALV 출력
-*---------------------------------------------------------------------*
-go_alv_grid->set_table_for_first_display(
+********* PBO *********
+CALL METHOD go_alv_grid->set_table_for_first_display
   EXPORTING
     i_structure_name = 'SBOOK'
   CHANGING
     it_outtab        = gt_data
-    it_fieldcatalog  = gt_fcat
-).
+    it_fieldcatalog  = gt_fcat.
 ```
 
 - 결과출력
