Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -271,6 +271,7 @@ CALL METHOD go_alv->set_table_for_first_display
 ### 5) ALV 초기 필터 조건 설정 (LVC_S_FILT)
 - ALV 최초 출력 시 특정 조건으로 데이터 필터링
 - **`set_filter_criteria` 는 이미 생성된 ALV Grid에 필터 조건만 새로 적용하는 메서드**
+- `SY-REPID` 시스템 변수 → 현재 실행 중인 프로그램의 리포트(프로그램) ID를 담고 있는 시스템 필드
 </br>
 
 - `lvc_s_filt` : 필터 조건 1개
@@ -315,7 +316,7 @@ START-OF-SELECTION.
 ********* (SCREEN 100) PROCESS BEFORE OUTPUT *********
 PROCESS BEFORE OUTPUT.
   MODULE status_0100.                            " 상태바
-  CALL SUBSCREEN SUB01 INCLUDING sy-cprog '1100'. " 필터 입력
+  CALL SUBSCREEN SUB01 INCLUDING sy-repid '1100'. " 필터 입력
   MODULE init_alv.                               " ALV 출력
 
 ********* (SCREEN 100) PROCESS AFTER INPUT *********
