Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -708,7 +708,7 @@ SELECTION-SCREEN END OF BLOCK blk1.
 **3) `F01` 모듈 생성**
 ```abap
 FORM set_data.
-  SELECT carrid connid fldate price currency planetype seatsmax seatsocc
+  SELECT *
     FROM sflight
     INTO CORRESPONDING FIELDS OF TABLE gt_data
     WHERE carrid IN so_car
