Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -718,11 +718,17 @@ FORM set_data.
   SELECT *
     FROM scarr
     INTO CORRESPONDING FIELDS OF TABLE gt_scarr
-    WHERE carrid IN so_car.
+    FOR ALL ENTRIES IN gt_data
+    WHERE carrid = gt_data-carrid.
 
   SELECT *
     FROM sbook
-    INTO CORRESPONDING FIELDS OF TABLE gt_sbook.
+    INTO CORRESPONDING FIELDS OF TABLE gt_sbook
+    FOR ALL ENTRIES IN gt_data
+    WHERE carrid = gt_data-carrid
+      AND connid = gt_data-connid
+      AND fldate = gt_data-fldate.
+  SORT gt_sbook.  " 첫번째 인덱스의 class를 가져오므로
 
   LOOP AT gt_data INTO gs_data.
     READ TABLE gt_scarr INTO gs_scarr WITH KEY carrid = gs_data-carrid
@@ -739,8 +745,6 @@ FORM set_data.
     MODIFY gt_data FROM gs_data TRANSPORTING carrname currcode seatsrem class.
     CLEAR gs_data.
   ENDLOOP.
-
-
 ENDFORM.
 
 *&---------------------------------------------------------------------*
