Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -278,6 +278,7 @@ INSERT LINES OF flights_table1 WHERE carrid = 'AA' INTO TABLE flights_table2.
 **3) READ – 특정 조건/위치의 값 조회**
 - 조건에 맞는 첫 번째 행을 가져옴
 - 성공 → `sy-subrc` = 0, 실패 → `sy-subrc` <> 0
+- Key 와 Index 는 같이 쓸 수 없음
 ```abap
 READ TABLE <인터널_테이블> INTO <행> 
      [WITH KEY <필드1> = <값1> <필드2> = <값2> …] 
