Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -17,3 +17,15 @@
 ## < ABAP 객체 생성 기본 문법 >
 </br>
 
+**1) ALV Grid 이벤트 정리 (`CL_GUI_ALV_GRID`)**
+- ALV 화면에서 발생하는 사용자 동작을 처리
+- `CL_GUI_ALV_GRID` : ALV Grid 이벤트를 제공하는 클래스
+
+| 구분 | 설명 |
+|------|------|
+| `DOUBLE_CLICK` | 셀을 더블클릭했을 때 발생 |
+| `ES_ROW_NO` | 더블클릭한 행 번호 |
+| `E_COLUMN` | 더블클릭한 컬럼명 |
+| `PRINT_TOP_OF_PAGE` | 출력 시 페이지 상단 처리 |
+| `USER_COMMAND` | ALV 버튼 클릭 시 발생 |
+| `E_UCOMM` | 눌린 버튼의 Function Code |
