Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -29,3 +29,6 @@
 | `PRINT_TOP_OF_PAGE` | 출력 시 페이지 상단 처리 |
 | `USER_COMMAND` | ALV 버튼 클릭 시 발생 |
 | `E_UCOMM` | 눌린 버튼의 Function Code |
+| `TOOLBAR` | ALV 툴바 생성 시 발생 |
+| `E_OBJECT` | 툴바 버튼 추가/수정 객체 |
+| `E_INTERACTIVE` | 인터랙티브 여부 플래그 ||
