--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -20,15 +20,27 @@
 ### 1) ALV Grid 이벤트 정리 (`CL_GUI_ALV_GRID`)
 - ALV 화면에서 발생하는 사용자 동작을 처리
 - `CL_GUI_ALV_GRID` : ALV Grid 이벤트를 제공하는 클래스
+</br>
 
-| 구분 | 설명 |
-|------|------|
+**ALV Grid 이벤트**
+- 이벤트: 언제 발생했는가
+
+| 이벤트 | 설명 |
+|--------|------|
 | `DOUBLE_CLICK` | 셀을 더블클릭했을 때 발생 |
-| `ES_ROW_NO` | 더블클릭한 행 번호 |
-| `E_COLUMN` | 더블클릭한 컬럼명 |
 | `PRINT_TOP_OF_PAGE` | 출력 시 페이지 상단 처리 |
 | `USER_COMMAND` | ALV 버튼 클릭 시 발생 |
-| `E_UCOMM` | 눌린 버튼의 Function Code |
 | `TOOLBAR` | ALV 툴바 생성 시 발생 |
-| `E_OBJECT` | 툴바 버튼 추가/수정 객체 |
-| `E_INTERACTIVE` | 인터랙티브 여부 플래그 ||
+
+</br>
+
+**ALV Grid 이벤트 파라미터**
+- 파라미터: 발생했을 때 어떤 정보가 넘어오는가
+  
+| 파라미터 | 설명 |
+|----------|------|
+| `ES_ROW_NO` | 더블클릭한 행 번호 |
+| `E_COLUMN` | 더블클릭한 컬럼명 |
+| `E_UCOMM` | 눌린 버튼의 Function Code |
+| `E_OBJECT` | 툴바 버튼 추가/제어 객체 |
+| `E_INTERACTIVE` | 인터랙티브 ALV 여부 |
