Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -44,3 +44,28 @@
 | `E_UCOMM` | 눌린 버튼의 Function Code |
 | `E_OBJECT` | 툴바 버튼 추가/제어 객체 |
 | `E_INTERACTIVE` | 인터랙티브 ALV 여부 |
+</br>
+
+- `FOR EVENT` : 처리할 이벤트 지정
+- `OF` : 이벤트가 발생하는 클래스
+- `IMPORTING` : 이벤트 발생 시 전달되는 값
+- `sender` : 이벤트를 발생시킨 객체
+```abap
+*************** TOP ****************
+CLASS lcl_handler DEFINITION.
+  PUBLIC SECTION.
+    METHODS handle_event
+      FOR EVENT <event_name> OF <event_class>
+      IMPORTING
+        p1
+        p2
+        sender.
+ENDCLASS.
+
+
+*************** IMP ****************
+CLASS lcl_handler IMPLEMENTATION.
+  METHOD handle_event.
+  ENDMETHOD.
+ENDCLASS.
+```
