Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -47,26 +47,30 @@
 </br>
 </br>
 
-- `FOR EVENT` : 처리할 이벤트 지정
-- `OF` : 이벤트가 발생하는 클래스
-- `IMPORTING` : 이벤트 발생 시 전달되는 값
-- `sender` : 이벤트를 발생시킨 객체
+- `<handler_class>` : 이벤트 핸들러 클래스명
+- `<handler_method>` : 이벤트 처리 메소드명
+- `<event_name>` : 발생 이벤트명
+- `<event_class>` : 이벤트를 가진 클래스
+- `<param_1>, <param_2>` : 이벤트 파라미터
 ```abap
 *************** TOP ****************
-CLASS lcl_handler DEFINITION.
+DATA: go_handler TYPE REF TO <handler_class>.
+
+
+CLASS <handler_class> DEFINITION.
   PUBLIC SECTION.
-    METHODS handle_event
+    METHODS <handler_method>
       FOR EVENT <event_name> OF <event_class>
       IMPORTING
-        p1
-        p2
+        <param_1>
+        <param_2>
         sender.
 ENDCLASS.
 
 
 *************** IMP ****************
-CLASS lcl_handler IMPLEMENTATION.
-  METHOD handle_event.
+CLASS <handler_class> IMPLEMENTATION.
+  METHOD <handler_method>.
   ENDMETHOD.
 ENDCLASS.
 ```
