Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -58,15 +58,14 @@ DATA: go_handler TYPE REF TO <handler_class>.
 
 
 CLASS <handler_class> DEFINITION.
-  PUBLIC SECTION.      " 외부 객체(ALV)가 이벤트 핸들러 메소드를 호출할 수 있게 하기 위해
-    METHODS <handler_method>
+  [PUBLIC | PROTECTED | PRIVATE] SECTION.
+    [CLASS-]METHODS <handler_method>
       FOR EVENT <event_name> OF <event_class>
       IMPORTING
         <param_1>
         <param_2>
         sender.
 ENDCLASS.
-
 
 *************** IMP ****************
 CLASS <handler_class> IMPLEMENTATION.
