Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -72,4 +72,13 @@ CLASS <handler_class> IMPLEMENTATION.
   METHOD <handler_method>.
   ENDMETHOD.
 ENDCLASS.
+
+*************** PBO ****************
+SET HANDLER <handler_class>=><handler_method> FOR <event_object>.
+
+CALL METHOD <event_object>->set_table_for_first_display
+  EXPORTING
+    i_structure_name = '<DDIC 구조>'
+  CHANGING
+    it_outtab        = <itab>
 ```
