Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -53,10 +53,7 @@
 - `<event_class>` : 이벤트를 가진 클래스
 - `<param_1>, <param_2>` : 이벤트 파라미터
 ```abap
-*************** TOP ****************
-DATA: go_handler TYPE REF TO <handler_class>.
-
-
+*************** CLASS DEFINITION ****************
 CLASS <handler_class> DEFINITION.
   [PUBLIC | PROTECTED | PRIVATE] SECTION.
     [CLASS-]METHODS <handler_method>
@@ -81,4 +78,36 @@ CALL METHOD <event_object>->set_table_for_first_display
     i_structure_name = '<DDIC 구조>'
   CHANGING
     it_outtab        = <itab>
+```
+```abap
+*************** TOP ****************
+DATA: go_alv TYPE REF TO cl_gui_alv_grid.
+
+*************** C01 ****************
+CLASS lcl_event_handler DEFINITION.
+  PUBLIC SECTION.
+    CLASS-METHODS on_double_click
+      FOR EVENT double_click OF cl_gui_alv_grid
+      IMPORTING
+        es_row_no
+        e_column.
+ENDCLASS.
+
+CLASS lcl_event_handler IMPLEMENTATION.
+  METHOD on_double_click.
+    MESSAGE i004(ZMCB03)
+      WITH es_row_no-row_id
+           e_column-fieldname.
+  ENDMETHOD.
+ENDCLASS.
+
+*************** PBO ****************
+SET HANDLER lcl_event_handler=>on_double_click FOR go_alv.
+
+*************** ALV DISPLAY ****************
+CALL METHOD go_alv->set_table_for_first_display
+  EXPORTING
+    i_structure_name     = 'SBOOK'
+  CHANGING
+    it_outtab            = gt_data
 ```
