Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -82,18 +82,20 @@ CALL METHOD <event_object>->set_table_for_first_display
 *************** C01 ****************
 CLASS lcl_event_handler DEFINITION.
   PUBLIC SECTION.
-    CLASS-METHODS on_double_click
-      FOR EVENT double_click OF cl_gui_alv_grid
-      IMPORTING
-        es_row_no
-        e_column.
+  CLASS-METHODS: ON_DOUBLE_CLICK
+    FOR EVENT DOUBLE_CLICK OF CL_GUI_ALV_GRID
+    IMPORTING ES_ROW_NO E_COLUMN SENDER.
+  " CL_GUI_ALV_GRID 클래스의 더블클릭 이벤트가 발생하면
+  " ON_DOUBLE_CLICK 이라는 메서드를 실행하겠다
 ENDCLASS.
 
 CLASS lcl_event_handler IMPLEMENTATION.
-  METHOD on_double_click.
-    MESSAGE i004(ZMCB03)
-      WITH es_row_no-row_id
-           e_column-fieldname.
+  "더블클릭 이벤트의 메서드 구현
+  METHOD ON_DOUBLE_CLICK.
+    IF SENDER = GO_ALV.
+      MESSAGE I004(ZMCB03) WITH ES_ROW_NO-row_id
+                                E_COLUMN-fieldname.
+    ENDIF.
   ENDMETHOD.
 ENDCLASS.
 
