Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -78,6 +78,7 @@ CALL METHOD <event_object>->set_table_for_first_display
   CHANGING
     it_outtab        = <itab>
 ```
+- `SENDER` = 이벤트를 발생시킨 객체(오브젝트) 참조
 ```abap
 *************** C01 ****************
 CLASS lcl_event_handler DEFINITION.
