--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -78,7 +78,8 @@ CALL METHOD <event_object>->set_table_for_first_display
   CHANGING
     it_outtab        = <itab>
 ```
-- `SENDER` = 이벤트를 발생시킨 객체(오브젝트) 참조
+- `SENDER` → 이벤트를 발생시킨 객체(오브젝트) 참조
+- `lcl_event_handler` → ALV 이벤트 처리용 로컬 클래스
 ```abap
 *************** C01 ****************
 CLASS lcl_event_handler DEFINITION.
