Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -47,6 +47,7 @@
 </br>
 </br>
 
+- `CLASS-METHODS` → 정적(static) 메서드, `METHODS` → 인스턴스 메서드
 - `<handler_class>` : 이벤트 핸들러 클래스명
 - `<handler_method>` : 이벤트 처리 메소드명
 - `<event_name>` : 발생 이벤트명
