Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -21,6 +21,17 @@
 - ALV 화면에서 발생하는 사용자 동작을 처리
 - `CL_GUI_ALV_GRID` : ALV Grid 이벤트를 제공하는 클래스
 </br>
+</br>
+
+**1) CLASS-METHODS (정적 메서드)**
+→ 객체 생성 없이 클래스명으로 바로 호출
+→ 공통 로직, 이벤트 핸들러에 자주 사용
+
+**2) METHODS (인스턴스 메서드)**
+→ 객체 생성(CREATE OBJECT) 후에만 호출
+→ 객체 상태(속성)를 사용하는 로직에 사용
+</br>
+</br>
 
 **ALV Grid 이벤트**
 - 이벤트: 언제 발생했는가
