Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -33,7 +33,7 @@
 </br>
 </br>
 
-**ALV Grid 이벤트**
+**ALV Grid 이벤트 / 파라미터**
 - 이벤트: 언제 발생했는가
 
 | 이벤트 | 설명 |
@@ -43,9 +43,6 @@
 | `USER_COMMAND` | ALV 버튼 클릭 시 발생 |
 | `TOOLBAR` | ALV 툴바 생성 시 발생 |
 
-</br>
-
-**ALV Grid 이벤트 파라미터**
 - 파라미터: 발생했을 때 어떤 정보가 넘어오는가
   
 | 파라미터 | 설명 |
