Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -35,8 +35,9 @@
 </br>
 </br>
 
-**ALV Grid 이벤트 / 파라미터**
+**< ALV Grid 이벤트 / 파라미터 >**
 - 이벤트: 언제 발생했는가
+- 파라미터: 발생했을 때 어떤 정보가 넘어오는가
 
 | 이벤트 | 설명 |
 |--------|------|
@@ -44,8 +45,6 @@
 | `PRINT_TOP_OF_PAGE` | 출력 시 페이지 상단 처리 |
 | `USER_COMMAND` | ALV 버튼 클릭 시 발생 |
 | `TOOLBAR` | ALV 툴바 생성 시 발생 |
-
-- 파라미터: 발생했을 때 어떤 정보가 넘어오는가
   
 | 파라미터 | 설명 |
 |----------|------|
