Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -104,8 +104,8 @@ CLASS lcl_event_handler IMPLEMENTATION.
   "더블클릭 이벤트의 메서드 구현
   METHOD ON_DOUBLE_CLICK.
     IF SENDER = GO_ALV.
-      MESSAGE I004(ZMCB03) WITH ES_ROW_NO-row_id
-                                E_COLUMN-fieldname.
+      MESSAGE I004(ZMCB03) WITH ES_ROW_NO-row_id        " 더블클릭된 ALV 행 번호
+                                E_COLUMN-fieldname.     " 더블클릭된 ALV 컬럼명
     ENDIF.
   ENDMETHOD.
 ENDCLASS.
