Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -119,3 +119,10 @@ CALL METHOD go_alv->set_table_for_first_display
   CHANGING
     it_outtab            = gt_data
 ```
+</br>
+</br>
+
+### 2) ALV Hotspot 이벤트 처리
+- ALV 컬럼을 클릭 가능한 링크(밑줄)로 표시하는 기능
+- 필드카탈로그 생성 시(PBO) `gs_fcat-hotspot = 'X'` 로 적용
+```
