--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -125,4 +125,35 @@ CALL METHOD go_alv->set_table_for_first_display
 ### 2) ALV Hotspot 이벤트 처리
 - ALV 컬럼을 클릭 가능한 링크(밑줄)로 표시하는 기능
 - 필드카탈로그 생성 시(PBO) `gs_fcat-hotspot = 'X'` 로 적용
+```abap
+*************** TOP / F01 : Field Catalog ****************
+CLEAR gs_fcat.
+gs_fcat-fieldname = '<HOTSPOT_FIELD>'.
+gs_fcat-hotspot   = 'X'.      " 클릭 가능한 링크(밑줄) 처리
+APPEND gs_fcat TO gt_fcat.
+
+*************** C01 : HOTSPOT EVENT HANDLER ****************
+CLASS <handler_class> DEFINITION.
+  PUBLIC SECTION.
+    CLASS-METHODS <handler_method>
+      FOR EVENT hotspot_click OF cl_gui_alv_grid
+      IMPORTING e_row_id e_column_id sender.
+ENDCLASS.
+
+CLASS <handler_class> IMPLEMENTATION.
+  METHOD <handler_method>.
+    " e_row_id-row_id        : 클릭된 행 번호
+    " e_column_id-fieldname : 클릭된 컬럼명
+  ENDMETHOD.
+ENDCLASS.
+
+*************** PBO ****************
+SET HANDLER <handler_class>=><handler_method> FOR go_alv.
+
+CALL METHOD go_alv->set_table_for_first_display
+  EXPORTING
+    i_structure_name = '<DDIC>'
+  CHANGING
+    it_outtab        = <itab>
+    it_fieldcatalog  = gt_fcat.
 ```
