Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -157,3 +157,19 @@ CALL METHOD go_alv->set_table_for_first_display
     it_outtab        = <itab>
     it_fieldcatalog  = gt_fcat.
 ```
+</br>
+</br>
+
+---
+
+</br>
+
+## < 실습 코드 >
+</br>
+
+### 실습 1
+</br>
+</br>
+
+- 문제
+<img width="374" height="208" alt="image" src="https://github.com/user-attachments/assets/90e9c079-c318-4291-9848-07923ecc223d" />
