Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -157,6 +157,37 @@ CALL METHOD go_alv->set_table_for_first_display
     it_outtab        = <itab>
     it_fieldcatalog  = gt_fcat.
 ```
+```abap
+*************** F01 ****************
+CLEAR gs_fcat.
+gs_fcat-fieldname = 'PHONE'.   " 핫스팟 적용 컬럼
+gs_fcat-hotspot   = 'X'.       " 핫스팟(링크) 활성화
+APPEND gs_fcat TO gt_fcat.
+
+*************** C01 ****************
+CLASS lcl_event_handler DEFINITION.
+  PUBLIC SECTION.
+    CLASS-METHODS on_hotspot_click
+      FOR EVENT hotspot_click OF cl_gui_alv_grid
+      IMPORTING
+        es_row_no     " 클릭된 행 정보 (row_id)
+        e_column_id  " 클릭된 컬럼 정보 (fieldname)
+        sender.
+ENDCLASS.
+
+CLASS lcl_event_handler IMPLEMENTATION.
+  METHOD on_hotspot_click.
+    IF sender = go_alv.
+      MESSAGE I004(ZMCB03)
+        WITH es_row_no-row_id        " 클릭된 행 번호
+             e_column_id-fieldname. " 클릭된 컬럼명
+    ENDIF.
+  ENDMETHOD.
+ENDCLASS.
+
+*************** PBO ****************
+SET HANDLER lcl_event_handler=>on_hotspot_click FOR go_alv.
+```
 </br>
 </br>
 
