Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -21,6 +21,13 @@
 - ALV 화면에서 발생하는 사용자 동작을 처리
 - `CL_GUI_ALV_GRID` : ALV Grid 이벤트를 제공하는 클래스
 </br>
+
+- `Instance Attribute` → 객체마다 메모리 가지는 속성 (DATA)
+- `Instance Method` → 객체마다 호출되는 메서드 (METHODS)
+- `Static Attribute` → 클래스마다 하나만 존재하는 속성 (CLASS-DATA)
+- `Static Method` → 클래스마다 하나만 존재하는 메서드 (CLASS-METHODS)
+- `Constants` → 값 변경 불가한 고정값 (CONSTANTS)
+</br>
 </br>
 
 **< ALV Grid 이벤트 / 파라미터 >**
