Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -17,7 +17,7 @@
 ## < ABAP 객체 생성 기본 문법 >
 </br>
 
-### 1) ALV Grid 이벤트 정리 (`CL_GUI_ALV_GRID`)
+### 1) ALV Grid 이벤트 처리 정리
 - ALV 화면에서 발생하는 사용자 동작을 처리
 - `CL_GUI_ALV_GRID` : ALV Grid 이벤트를 제공하는 클래스
 </br>
