Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -133,13 +133,13 @@ CALL METHOD go_alv->set_table_for_first_display
 - ALV 컬럼을 클릭 가능한 링크(밑줄)로 표시하는 기능
 - 필드카탈로그 생성 시(PBO) `gs_fcat-hotspot = 'X'` 로 적용
 ```abap
-*************** TOP / F01 : Field Catalog ****************
+*************** F01 ****************
 CLEAR gs_fcat.
 gs_fcat-fieldname = '<HOTSPOT_FIELD>'.
 gs_fcat-hotspot   = 'X'.      " 클릭 가능한 링크(밑줄) 처리
 APPEND gs_fcat TO gt_fcat.
 
-*************** C01 : HOTSPOT EVENT HANDLER ****************
+*************** C01 ****************
 CLASS <handler_class> DEFINITION.
   PUBLIC SECTION.
     CLASS-METHODS <handler_method>
@@ -210,4 +210,68 @@ SET HANDLER lcl_event_handler=>on_hotspot_click FOR go_alv.
 </br>
 
 - 문제
+- 전 exercise 코드에서 추가
 <img width="374" height="208" alt="image" src="https://github.com/user-attachments/assets/90e9c079-c318-4291-9848-07923ecc223d" />
+</br>
+</br>
+
+**1) `F01` 모듈 수정**
+```abap
+FORM set_fcat .
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'SEATSOCC'.
+  gs_fcat-do_sum = 'X'.
+  gs_fcat-hotspot = 'X'.    " 핫스팟 추가
+  APPEND gs_fcat TO gt_fcat.
+ENDFORM.
+```
+</br>
+</br>
+
+**2) `C01` 모듈 수정**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC405_03_ALV_C01_3
+*&---------------------------------------------------------------------*
+
+CLASS lcl_event_handler DEFINITION.
+  PUBLIC SECTION.
+    CLASS-METHODS: on_double_click
+      FOR EVENT double_click OF cl_gui_alv_grid
+      IMPORTING es_row_no sender.
+
+    CLASS-METHODS: on_hotspot_click
+      FOR EVENT hotspot_click OF cl_gui_alv_grid
+      IMPORTING es_row_no sender.
+ENDCLASS.
+
+CLASS lcl_event_handler IMPLEMENTATION.
+  METHOD on_double_click.
+    IF sender = go_alv_grid.
+      DATA: total_seat TYPE int4.
+
+      READ TABLE gt_flight INTO gs_flight INDEX es_row_no-row_id.
+      IF sy-subrc <> 0.
+        MESSAGE i075(bc405_408).
+        EXIT.
+      ENDIF.
+
+      total_seat = gs_flight-seatsocc + gs_flight-seatsocc_b + gs_flight-seatsocc_f.
+      MESSAGE 'Total:' && total_seat TYPE 'I'.
+    ENDIF.
+  ENDMETHOD.
+
+  METHOD on_hotspot_click.
+    IF sender = go_alv_grid.
+      READ TABLE gt_flight INTO gs_flight INDEX es_row_no-row_id.
+      IF gs_flight-excp = '1'.
+        MESSAGE '빨간색 입니다.' TYPE 'I'.
+      ELSEIF gs_flight-excp = '2'.
+        MESSAGE '노란색 입니다.' TYPE 'I'.
+      ELSE.
+        MESSAGE '초록색 입니다.' TYPE 'I'.
+      ENDIF.
+    ENDIF.
+  ENDMETHOD.
+endclass.
+```
