Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -271,3 +271,24 @@ CLASS lcl_event_handler IMPLEMENTATION.
   ENDMETHOD.
 endclass.
 ```
+</br>
+</br>
+
+**3) `PBO` 모듈 수정**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC405_03_ALV_O01
+*&---------------------------------------------------------------------*
+
+MODULE create_and_transfer OUTPUT.
+    SET HANDLER lcl_event_handler=>on_double_click FOR go_alv_grid.
+    SET HANDLER lcl_event_handler=>on_hotspot_click FOR go_alv_grid.
+
+    CALL METHOD go_alv_grid->set_table_for_first_display
+      EXPORTING
+        i_structure_name              = 'SFLIGHT'
+      CHANGING
+        it_outtab                     = gt_flight
+        IT_FIELDCATALOG               = gt_fcat
+ENDMODULE.
+```
