Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -216,6 +216,10 @@ SET HANDLER lcl_event_handler=>on_hotspot_click FOR go_alv.
 </br>
 
 **1) `F01` 모듈 수정**
+*&---------------------------------------------------------------------*
+*& Include          ZBC405_03_ALV_F01
+*&---------------------------------------------------------------------*
+
 ```abap
 FORM set_fcat .
   CLEAR gs_fcat.
@@ -230,6 +234,10 @@ ENDFORM.
 
 **2) `C01` 모듈 수정**
 ```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC405_03_ALV_C01_3
+*&---------------------------------------------------------------------*
+
 CLASS lcl_event_handler DEFINITION.
   PUBLIC SECTION.
     CLASS-METHODS: on_double_click
