Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -1,11 +1,8 @@
 ## <  핵심 개념 >
 </br>
 
-- **1) ALV 표준 툴바 버튼 제어**
-- **2) ALV Field Catalog**
-</br>
-
-- **SELECT-OPTIONS는 `Selection Screen` 에서만 가능**
+- **1) ALV Grid 이벤트 처리 정리 (`CLASS-METHODS`)**
+- **2) ALV Hotspot 이벤트 처리**
 
 </br>
 </br>
