Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -32,10 +32,13 @@
 - `MC_MB_*` → 여러 기능이 묶인 메뉴 버튼 Function Code
 - `MC_FC_EXCL_ALL` → ALV 툴바 전체 버튼을 숨기는 Function Code (버튼만 숨김)
 ```abap
+********* TOP *********
 DATA: <gt_excluded> TYPE ui_functions.
 
+********* F01 *********
 APPEND cl_gui_alv_grid=><function_code> TO <gt_excluded>.
 
+********* PBO *********
 go_alv_grid->set_table_for_first_display(
   EXPORTING
     i_structure_name     = '<DDIC 구조>'
@@ -133,41 +136,40 @@ CALL METHOD go_alv->set_table_for_first_display
 </br>
 
 ```abap
-" 출력 구조 (기존 DDIC + 추가 컬럼)
+********* TOP *********
+TYPE-POOLS: icon.
+
 TYPES: BEGIN OF <gs_type>.
   INCLUDE TYPE <DDIC_STRUCTURE>.
   <add_field_1> TYPE <ddic_type_1>.
   <add_field_2> TYPE <ddic_type_2>.
 END OF <gs_type>.
-
 DATA: <gt_outtab> TYPE TABLE OF <gs_type>.
 
 " Field Catalog 선언
 DATA: <gt_fcat> TYPE lvc_t_fcat,
       <gs_fcat> TYPE lvc_s_fcat.
 
-" 추가 컬럼 1
-<gs_fcat>-fieldname = '<ADD_FIELD_1>'.
+********* F01 *********
+<gs_fcat>-fieldname = '<ADD_FIELD_1>'.      " 추가 컬럼 1
 <gs_fcat>-ref_field = '<REF_FIELD>'.
 <gs_fcat>-ref_table = '<REF_TABLE>'.
 <gs_fcat>-col_pos   = <N>.
 APPEND <gs_fcat> TO <gt_fcat>.
 CLEAR <gs_fcat>.
 
-" 추가 컬럼 2 (아이콘 등 표현 변경)
-<gs_fcat>-fieldname = '<ADD_FIELD_2>'.
+<gs_fcat>-fieldname = '<ADD_FIELD_2>'.      " 추가 컬럼 2 (아이콘 등 표현 변경)
 <gs_fcat>-icon      = 'X'.
 <gs_fcat>-coltext   = '<TEXT>'.
 APPEND <gs_fcat> TO <gt_fcat>.
 CLEAR <gs_fcat>.
 
-" 기존 컬럼 숨김
-<gs_fcat>-fieldname = '<ORIGINAL_FIELD>'.
+<gs_fcat>-fieldname = '<ORIGINAL_FIELD>'.   " 기존 컬럼 숨김
 <gs_fcat>-no_out    = 'X'.
 APPEND <gs_fcat> TO <gt_fcat>.
 CLEAR <gs_fcat>.
 
-" ALV 출력
+********* PBO *********
 <go_alv>->set_table_for_first_display(
   EXPORTING
     i_structure_name = '<DDIC_STRUCTURE>'
