Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -208,6 +208,7 @@ SET HANDLER lcl_event_handler=>on_hotspot_click FOR go_alv.
 
 - 문제
 - 전 exercise 코드에서 추가
+- CLASS-METHODS, Hotspot 실습
 <img width="374" height="208" alt="image" src="https://github.com/user-attachments/assets/90e9c079-c318-4291-9848-07923ecc223d" />
 </br>
 </br>
