--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -3,6 +3,9 @@
 
 - **1) ALV Grid 이벤트 처리 정리 (`CLASS-METHODS`)**
 - **2) ALV Hotspot 이벤트 처리**
+</br>
+
+- **ALV 핫스팟 클릭은 OKCODE가 없어서 PAI를 안 탐**
 
 </br>
 </br>
