Update 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -1,1 +1,37 @@
+## <  핵심 개념 >
+</br>
+
+- **1) ALV Grid 이벤트 처리 정리 (`CLASS-METHODS`)**
+- **2) ALV Hotspot 이벤트 처리**
+</br>
+
+- **ALV 핫스팟 클릭은 OKCODE가 없어서 PAI를 안 탐**
+
+</br>
+</br>
+
+---
+
+</br>
+
+## < ABAP 객체 생성 기본 문법 >
+</br>
+</br>
+
+---
+
+</br>
+
+## < 실습 코드 >
+</br>
+
+### 실습 1
+</br>
+
+- 문제
+- alv 2개, hotspot 실습
+  
+<img width="460" height="267" alt="image" src="https://github.com/user-attachments/assets/1b0259a5-109e-4e83-ba22-3188a9c65a66" />
+</br>
+</br>
 
