Update 프로그래밍 전용 리포트 개발(12.31).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -43,11 +43,23 @@
   
 | 파라미터 | 설명 |
 |----------|------|
-| `ES_ROW_NO` | 더블클릭한 행 번호 |
-| `E_COLUMN` | 더블클릭한 컬럼명 |
+| `ES_ROW_NO` | 화면 기준 행 번호 (정렬/필터 적용 후 기준) |
+| `E_ROW_ID` | 내부 테이블 기준 행 인덱스 |
+| `E_COLUMN` | 더블클릭한 컬럼 정보 (`fieldname`) |
+| `E_COLUMN_ID` | 핫스팟 클릭한 컬럼명 |
 | `E_UCOMM` | 눌린 버튼의 Function Code |
 | `E_OBJECT` | 툴바 버튼 추가/제어 객체 |
 | `E_INTERACTIVE` | 인터랙티브 ALV 여부 |
+| `SENDER` | 이벤트를 발생시킨 ALV 객체 |
+| `ER_DATA_CHANGED` | 변경된 셀 정보 객체 |
+| `E_MODIFIED` | 데이터 변경 발생 여부 |
+| `E_FIELDNAME` | F4 도움말이 호출된 필드명 |
+| `E_FIELDVALUE` | F4 호출 시 필드의 현재 값 |
+| `ER_EVENT_DATA` | 이벤트 제어 객체 (F4 처리 등) |
+| `E_ONF4` | F4 도움말 호출 여부 |
+| `E_ONF4_BEFORE` | F4 호출 이전 시점 |
+| `E_ONF4_AFTER` | F4 호출 이후 시점 |
+
 </br>
 </br>
 
