Update 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -28,10 +28,241 @@
 ### 실습 1
 </br>
 
-- 문제
+- 새로 구성하는 실습
 - alv 2개, hotspot 실습
   
 <img width="384" height="223" alt="image" src="https://github.com/user-attachments/assets/e891f22d-5304-45f1-b709-97a0ac023e6f" />
 </br>
 </br>
+</br>
 
+**1) `Report program` 에서 `Include` 파일 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Report ZALV_SPFLI_B03
+*&---------------------------------------------------------------------*
+
+INCLUDE ZALV_SPFLI_B03_TOP.
+INCLUDE ZALV_SPFLI_B03_C01.
+INCLUDE ZALV_SPFLI_B03_O01.
+INCLUDE ZALV_SPFLI_B03_I01.
+INCLUDE ZALV_SPFLI_B03_F01.
+
+START-OF-SELECTION.
+  PERFORM get_data.
+  CALL SCREEN 100.
+```
+</br>
+
+**2) `TOP` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZALV_SPFLI_B03_TOP
+*&---------------------------------------------------------------------*
+
+DATA: OK_CODE TYPE sy-ucomm.
+DATA: go_cont TYPE REF TO cl_gui_custom_container,
+      go_alv TYPE REF TO cl_gui_alv_grid,
+      go_cont2 TYPE REF TO cl_gui_custom_container,
+      go_alv2 TYPE REF TO cl_gui_alv_grid,
+      gt_fcat TYPE LVC_T_FCAT,
+      gs_fcat TYPE LVC_S_FCAT.
+
+DATA: gs_sflight TYPE sflight,
+      gt_sflight TYPE TABLE OF sflight,
+      gv_index TYPE I.
+
+DATA: BEGIN OF gs_data,
+        carrid TYPE spfli-carrid,
+        carrname TYPE scarr-carrname,
+        connid TYPE spfli-connid,
+        cityfrom TYPE spfli-cityfrom,
+        cityto TYPE spfli-cityto,
+        airpfrom TYPE spfli-airpfrom,
+        airpto TYPE spfli-airpto,
+      END OF gs_data.
+DATA: gt_data LIKE TABLE OF gs_data.
+
+PARAMETERS: pa_carr TYPE spfli-carrid DEFAULT 'AZ'.
+SELECT-OPTIONS: so_con FOR gs_data-connid.
+```
+</br>
+
+**3) `C01` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZALV_SPFLI_B03_C01
+*&---------------------------------------------------------------------*
+
+CLASS lcl_event_handler DEFINITION.
+  PUBLIC SECTION.
+  CLASS-METHODS: ON_HOTSPOT_CLICK
+    FOR EVENT HOTSPOT_CLICK OF CL_GUI_ALV_GRID
+    IMPORTING E_ROW_ID SENDER.
+ENDCLASS.
+
+
+CLASS lcl_event_handler IMPLEMENTATION.
+  METHOD ON_HOTSPOT_CLICK.
+    IF SENDER = GO_ALV.
+      gv_index = E_ROW_ID-index.
+      PERFORM get_sflight.
+      CALL SCREEN 110.
+    ENDIF.
+  ENDMETHOD.
+ENDCLASS.
+```
+</br>
+
+**4) `PBO` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZALV_SPFLI_B03_O01
+*&---------------------------------------------------------------------*
+
+MODULE status_0100 OUTPUT.
+  SET PF-STATUS 'S100'.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE init_alv OUTPUT.
+  IF go_cont IS INITIAL.
+    CREATE OBJECT go_cont
+      EXPORTING
+        container_name              = 'AREA'
+      EXCEPTIONS
+        cntl_error                  = 1
+        cntl_system_error           = 2
+        create_error                = 3
+        lifetime_error              = 4
+        lifetime_dynpro_dynpro_link = 5
+        OTHERS                      = 6.
+    IF sy-subrc <> 0.
+    ENDIF.
+
+    CREATE OBJECT go_alv
+      EXPORTING
+        i_parent          = go_cont
+      EXCEPTIONS
+        error_cntl_create = 1
+        error_cntl_init   = 2
+        error_cntl_link   = 3
+        error_dp_create   = 4
+        others            = 5.
+    IF sy-subrc <> 0.
+    ENDIF.
+
+    PERFORM set_fcat.
+    SET HANDLER lcl_event_handler=>on_hotspot_click FOR go_alv.
+    CALL METHOD go_alv->set_table_for_first_display
+      CHANGING
+        it_outtab                     = gt_data
+        it_fieldcatalog               = gt_fcat
+      EXCEPTIONS
+        invalid_parameter_combination = 1
+        program_error                 = 2
+        too_many_lines                = 3
+        others                        = 4.
+    IF sy-subrc <> 0.
+    ENDIF.
+  ENDIF.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE status_0110 OUTPUT.
+ SET PF-STATUS 'S110'.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE init_alv2 OUTPUT.
+  IF go_cont2 IS INITIAL.
+    CREATE OBJECT go_cont2
+      EXPORTING
+        container_name              = 'AREA2'
+      EXCEPTIONS
+        cntl_error                  = 1
+        cntl_system_error           = 2
+        create_error                = 3
+        lifetime_error              = 4
+        lifetime_dynpro_dynpro_link = 5
+        others                      = 6.
+    IF sy-subrc <> 0.
+    ENDIF.
+
+    CREATE OBJECT go_alv2
+      EXPORTING
+        i_parent          = go_cont2
+      EXCEPTIONS
+        error_cntl_create = 1
+        error_cntl_init   = 2
+        error_cntl_link   = 3
+        error_dp_create   = 4
+        others            = 5.
+    IF sy-subrc <> 0.
+    ENDIF.
+
+    CALL METHOD go_alv2->set_table_for_first_display
+      EXPORTING
+        i_structure_name              = 'SFLIGHT'
+      CHANGING
+        it_outtab                     = gt_sflight
+      EXCEPTIONS
+        invalid_parameter_combination = 1
+        program_error                 = 2
+        too_many_lines                = 3
+        others                        = 4.
+    IF sy-subrc <> 0.
+    ENDIF.
+
+  ENDIF.
+ENDMODULE.
+```
+</br>
+
+**4) `PAI` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZALV_SPFLI_B03_I01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*&      Module  EXIT  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE exit INPUT.
+  CASE OK_CODE.
+    WHEN 'EXIT'.
+      LEAVE PROGRAM.
+    WHEN 'CANCEL'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*&      Module  USER_COMMAND_0100  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*&      Module  USER_COMMAND_0110  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE user_command_0110 INPUT.
+  CASE OK_CODE.
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
