--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.31).md
@@ -5,7 +5,8 @@
 - **2) ALV Hotspot 이벤트 처리**
 </br>
 
-- **C01(INCLUDE)은 TOP 바로 아래에 두는 게 정석**
+- **ALV 핫스팟 클릭은 OKCODE가 없어서 PAI를 안 탐**
+- **`i_structure_name` 는 DDIC(Dictionary)에 정의된 구조만 가능**
 </br>
 </br>
 
