--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -5,8 +5,7 @@
 - **2) ALV Hotspot 이벤트 처리**
 </br>
 
-- **ALV 핫스팟 클릭은 OKCODE가 없어서 PAI를 안 탐**
-
+- **C01(INCLUDE)은 TOP 바로 아래에 두는 게 정석**
 </br>
 </br>
 
