--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -87,7 +87,107 @@ SELECT-OPTIONS: so_con FOR gs_data-connid.
 ```
 </br>
 
-**3) `C01` 모듈 생성**
+**3) `F01` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZALV_SPFLI_B03_F01
+*&---------------------------------------------------------------------*
+
+FORM get_data.
+  DATA: gt_scarr TYPE TABLE OF scarr,
+        gs_scarr TYPE scarr.
+
+  SELECT carrid connid cityfrom cityto airpfrom airpto FROM spfli
+    INTO CORRESPONDING FIELDS OF TABLE gt_data
+    WHERE carrid = pa_carr
+      AND connid IN so_con.
+  SELECT carrid carrname FROM scarr
+    INTO CORRESPONDING FIELDS OF TABLE gt_scarr
+    FOR ALL ENTRIES IN gt_data
+    WHERE carrid = gt_data-carrid.
+
+  LOOP AT gt_data INTO gs_data.
+    READ TABLE gt_scarr INTO gs_scarr WITH KEY carrid = gs_data-carrid
+      TRANSPORTING carrname.
+    gs_data-carrname = gs_scarr-carrname.
+    MODIFY gt_data FROM gs_data TRANSPORTING carrname.
+  ENDLOOP.
+
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM get_sflight.
+  READ TABLE gt_data INTO gs_data INDEX gv_index.
+  SELECT * FROM sflight
+    INTO CORRESPONDING FIELDS OF TABLE gt_sflight
+    WHERE carrid = gs_data-carrid
+      AND connid = gs_data-connid.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM set_fcat.
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'CARRID'.
+  gs_fcat-ref_field = 'CARRID'.
+  gs_fcat-ref_table = 'SPFLI'.
+  gs_fcat-hotspot = 'X'.
+  APPEND gs_fcat TO gt_fcat.
+
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'CARRNAME'.
+  gs_fcat-ref_field = 'CARRNAME'.
+  gs_fcat-ref_table = 'SCARR'.
+  APPEND gs_fcat TO gt_fcat.
+
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'CONNID'.
+  gs_fcat-ref_field = 'CONNID'.
+  gs_fcat-ref_table = 'SPFLI'.
+  APPEND gs_fcat TO gt_fcat.
+
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'CITYFROM'.
+  gs_fcat-ref_field = 'CITYFROM'.
+  gs_fcat-ref_table = 'SPFLI'.
+  APPEND gs_fcat TO gt_fcat.
+
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'CITYTO'.
+  gs_fcat-ref_field = 'CITYTO'.
+  gs_fcat-ref_table = 'SPFLI'.
+  APPEND gs_fcat TO gt_fcat.
+
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'AIRPFROM'.
+  gs_fcat-ref_field = 'AIRPFROM'.
+  gs_fcat-ref_table = 'SPFLI'.
+  APPEND gs_fcat TO gt_fcat.
+
+    CLEAR gs_fcat.
+  gs_fcat-fieldname = 'AIRPTO'.
+  gs_fcat-ref_field = 'AIRPTO'.
+  gs_fcat-ref_table = 'SPFLI'.
+  APPEND gs_fcat TO gt_fcat.
+
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM free_alv.
+  IF GO_ALV2 IS NOT INITIAL.
+    GO_ALV2->FREE( ).
+  ENDIF.
+  IF GO_CONT2 IS NOT INITIAL.
+    GO_CONT2->FREE( ).
+  ENDIF.
+  FREE: GO_ALV2, GO_CONT2.
+ENDFORM.
+```
+</br>
+
+**4) `C01` 모듈 생성**
 ```abap
 *&---------------------------------------------------------------------*
 *& Include          ZALV_SPFLI_B03_C01
@@ -113,7 +213,7 @@ ENDCLASS.
 ```
 </br>
 
-**4) `PBO` 모듈 생성**
+**5) `PBO` 모듈 생성**
 ```abap
 *&---------------------------------------------------------------------*
 *& Include          ZALV_SPFLI_B03_O01
@@ -221,16 +321,12 @@ ENDMODULE.
 ```
 </br>
 
-**4) `PAI` 모듈 생성**
+**6) `PAI` 모듈 생성**
 ```abap
 *&---------------------------------------------------------------------*
 *& Include          ZALV_SPFLI_B03_I01
 *&---------------------------------------------------------------------*
-*&---------------------------------------------------------------------*
-*&      Module  EXIT  INPUT
-*&---------------------------------------------------------------------*
-*       text
-*----------------------------------------------------------------------*
+
 MODULE exit INPUT.
   CASE OK_CODE.
     WHEN 'EXIT'.
@@ -240,11 +336,9 @@ MODULE exit INPUT.
     WHEN OTHERS.
   ENDCASE.
 ENDMODULE.
+
 *&---------------------------------------------------------------------*
-*&      Module  USER_COMMAND_0100  INPUT
-*&---------------------------------------------------------------------*
-*       text
-*----------------------------------------------------------------------*
+
 MODULE user_command_0100 INPUT.
   CASE OK_CODE.
     WHEN 'BACK'.
@@ -252,16 +346,22 @@ MODULE user_command_0100 INPUT.
     WHEN OTHERS.
   ENDCASE.
 ENDMODULE.
+
 *&---------------------------------------------------------------------*
-*&      Module  USER_COMMAND_0110  INPUT
-*&---------------------------------------------------------------------*
-*       text
-*----------------------------------------------------------------------*
+
 MODULE user_command_0110 INPUT.
   CASE OK_CODE.
     WHEN 'BACK'.
+      PERFORM free_alv.
       LEAVE TO SCREEN 0.
     WHEN OTHERS.
   ENDCASE.
 ENDMODULE.
 ```
+</br>
+
+**7) 결과 확인**
+
+<img width="423" height="102" alt="image" src="https://github.com/user-attachments/assets/0336d2c5-97f0-46db-9709-17cb3433a6b6" />
+</br>
+</br>
