Update 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -365,3 +365,5 @@ ENDMODULE.
 <img width="423" height="102" alt="image" src="https://github.com/user-attachments/assets/0336d2c5-97f0-46db-9709-17cb3433a6b6" />
 </br>
 </br>
+
+<img width="470" height="164" alt="image" src="https://github.com/user-attachments/assets/4c4c5b8d-8711-428a-b928-30b01aa655cd" />
