--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -364,6 +364,8 @@ ENDMODULE.
 
 <img width="423" height="102" alt="image" src="https://github.com/user-attachments/assets/0336d2c5-97f0-46db-9709-17cb3433a6b6" />
 </br>
-</br>
 
 <img width="470" height="164" alt="image" src="https://github.com/user-attachments/assets/4c4c5b8d-8711-428a-b928-30b01aa655cd" />
+</br>
+
+<img width="576" height="235" alt="image" src="https://github.com/user-attachments/assets/9ce370ba-7c5e-49e2-ae34-579c640fe04b" />
