Update 프로그래밍 전용 리포트 개발(01.02).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(01.02).md
@@ -15,6 +15,59 @@
 
 ## < ABAP 객체 생성 기본 문법 >
 </br>
+
+### 1) ALV 표준 툴바 확장 (TOOLBAR 이벤트)
+- ALV 표준 툴바에 사용자 정의 버튼을 추가·제어하기 위해 사용되는 이벤트
+  
+| 값 | 의미 |
+|----|------|
+| `0` | 일반 버튼 |
+| `1` | 메뉴 + 표준 버튼 |
+| `2` | 메뉴 |
+| `3` | 구분선 (Separator) |
+| `4` | 선택 버튼 |
+| `5` | 체크박스 버튼 |
+| `6` | 메뉴 엔트리 |
+
+```abap
+*************** C01 ****************
+CLASS lcl_event_handler DEFINITION.
+  PUBLIC SECTION.
+    CLASS-METHODS on_toolbar
+      FOR EVENT toolbar OF cl_gui_alv_grid
+      IMPORTING
+        e_object
+        e_interactive
+        sender.
+ENDCLASS.
+
+CLASS lcl_event_handler IMPLEMENTATION.
+  METHOD on_toolbar.
+    DATA ls_button TYPE stb_button.
+
+    CLEAR ls_button.
+    ls_button-function  = '<FUNC_CODE>'.   " 버튼 Function Code (USER_COMMAND에서 구분)
+    ls_button-icon      = <ICON>.          " 버튼에 표시되는 아이콘
+    ls_button-text      = '<TEXT>'.        " 버튼에 표시되는 텍스트
+    ls_button-quickinfo = '<QUICKINFO>'.   " 마우스 오버 시 표시되는 툴팁 설명
+    ls_button-butn_type = '0'.             " 버튼 타입 (0: 일반 버튼)
+
+    INSERT ls_button INTO TABLE e_object->mt_toolbar.
+  ENDMETHOD.
+ENDCLASS.
+
+
+*************** PBO ****************
+SET HANDLER lcl_event_handler=>on_toolbar FOR go_alv.
+
+CALL METHOD go_alv->set_table_for_first_display
+  EXPORTING
+    i_structure_name = '<DDIC 구조>'
+  CHANGING
+    it_outtab        = <itab>.
+```
+
+</br>
 </br>
 
 ---
